# templates

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  template-outline.md  utils.py
.github/prompts/: cleanup-template-code.prompt.md  create-template-readme.prompt.md  review-template.prompt.md  update-template-readme.prompt.md
.github/workflows/: docs-preview.yml
ad_spend_allocation/: README.md  ad_spend_allocation.py
dev_temp/: code_implementation_outline.md
diet/: README.md  debug.jsonl  diet.py
factory_production/: README.md  factory_production.py
grid_interconnection/: README.md  grid_interconnection.py
grid_interconnection/data/: projects.csv  substations.csv  upgrades.csv
hospital_staffing/: README.md  hospital_staffing.py
hospital_staffing/data/: nurses.csv  shifts.csv
inventory_rebalancing/: README.md  inventory_rebalancing.py
machine_maintenance/: README.md  machine_maintenance.py
machine_maintenance/data/: conflicts.csv
markdown_optimization/: README.md  markdown_optimization.py
markdown_optimization/data/: discounts.csv  products.csv  week_pairs.csv
network_flow/: README.md  network_flow.py
order_fulfillment/: README.md  order_fulfillment.py
portfolio_balancing/: README.md  portfolio_balancing.py
portfolio_optimization/: README.md  portfolio_optimization.py
portfolio_optimization/data/: returns.csv
production_planning/: README.md  production_planning.py
production_planning/data/: machines.csv  products.csv
retail_markdown/: README.md
retail_markdown/data/: products.csv
sample-template/: README.md  pyproject.toml
shift_assignment/: README.md  shift_assignment.py
supplier_reliability/: README.md  supplier_reliability.py
supply_chain_transport/: README.md  supply_chain_transport.py
supply_chain_transport/data/: customers.csv
template/: template.py
test_data_generation/: README.md
traveling_salesman/: README.md  traveling_salesman.py
v0.13/: README.md
v0.13 semantics/: README.md
v0.13 semantics/designs/: template_revision_plan.md
v0.13 semantics/dev_temp/: implementation_status.md
v0.13 semantics/factory_production/: factory_production.py
v0.13 semantics/hospital_staffing/: hospital_staffing.py
v0.13 semantics/machine_maintenance/: README.md
v0.13 semantics/network_flow/: README.md
v0.13 semantics/order_fulfillment/: order_fulfillment.py
v0.13 semantics/production_planning/: production_planning.py
v0.13 semantics/retail_markdown/: retail_markdown.py
v0.13 semantics/test_data_generation/: test_data_generation.py
v0.13/ad_spend_allocation/: README.md  (+2 more)
v0.13/hello_world/: README.md  pyproject.toml
v0.13/hospital_staffing/: README.md  hospital_staffing.py  pyproject.toml
v0.13/hospital_staffing/data/: nurses.csv  shifts.csv
v0.13/inventory_rebalancing/: README.md  inventory_rebalancing.py  pyproject.toml
v0.13_semantics/: README.md
v0.13_semantics/factory_production/: README.md  factory_production.py  pyproject.toml
v0.13_semantics/network_flow/: README.md  network_flow.py  pyproject.toml
v0.14/: README.md
v0.14/diet/: README.md  diet.py  pyproject.toml
v0.14/grid_interconnection/: README.md  grid_interconnection.py  pyproject.toml
v0.14/inventory_rebalancing/: README.md  inventory_rebalancing.py  pyproject.toml
v0.14/order_fulfillment/: README.md  order_fulfillment.py  pyproject.toml
v0.14/portfolio_balancing/: README.md  portfolio_balancing.py  pyproject.toml
v0.14/portfolio_balancing/data/: returns.csv
v0.14/production_planning/: README.md  production_planning.py  pyproject.toml
v0.14/retail_markdown/: README.md  pyproject.toml  retail_markdown.py
v0.14/shift_assignment/: README.md  pyproject.toml  shift_assignment.py
v0.14/shift_assignment/data/: shifts.csv  workers.csv
v0.14/supply_chain_transport/: README.md  pyproject.toml  supply_chain_transport.py
v0.14/supply_chain_transport/data/: transport_modes.csv  warehouses.csv
v0.14/test_data_generation/: README.md  pyproject.toml  test_data_generation.py
v0.14/test_data_generation/data/: testgen_constraints.csv
v0.14/vehicle_scheduling/: README.md  pyproject.toml  vehicle_scheduling.py
v0.14/water_allocation/: README.md  pyproject.toml  water_allocation.py
v0.14/water_allocation/data/: sources.csv
v1/ad_spend_allocation/: README.md  ad_spend_allocation.py  pyproject.toml
v1/demand_planning_temporal/: README.md  demand_planning_temporal.py  pyproject.toml
v1/demand_planning_temporal/data/: demand_orders.csv  initial_inventory.csv  production_capacity.csv  sites.csv  skus.csv
v1/disease_outbreak_prevention_network/: README.md  app.py  disease_outbreak_prevention_network.py  pyproject.toml  spans.jsonl
v1/disease_outbreak_prevention_network/data/: connections.csv
v1/epidemic-spread-intervention/: README.md  app.py  epidemic-spread-intervention.py  model_setup.py  pyproject.toml
v1/epidemic-spread-intervention/data/: direct_contacts.csv  locations.csv  people.csv  visits.csv
v1/factory_production/: README.md  factory_production.py  pyproject.toml
v1/factory_production/data/: factories.csv  products.csv
v1/fraud-detection/: README.md  fraud-detection.ipynb  pyproject.toml
v1/grid_interconnection/: README.md  grid_interconnection.py  pyproject.toml
v1/grid_interconnection/data/: projects.csv
v1/hospital_staffing/: README.md  hospital_staffing.py  pyproject.toml
v1/humanitarian-aid-supply-chain/: README.md  app.py  model_setup.py  pyproject.toml
v1/humanitarian-aid-supply-chain/data/: distribution_points.csv  supply_routes.csv
v1/machine_maintenance/: README.md  machine_maintenance.py  pyproject.toml
v1/machine_maintenance/data/: availability.csv  machines.csv  technicians.csv
v1/machine_maintenance/data/full_scale/: README.md  availability.csv  machines.csv  technicians.csv
v1/network_flow/: README.md  network_flow.py  pyproject.toml
v1/portfolio_balancing/: README.md  portfolio_balancing.py  pyproject.toml
v1/portfolio_balancing/data/: covar.csv
vehicle_scheduling/: README.md  vehicle_scheduling.py
water_allocation/: README.md  water_allocation.py
(+202 files in other folders)
