[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-factory-production"
version = "0.0.0"
description = "RelationalAI template: factory_production"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==0.13.3",
  "pandas",
]

[tool.setuptools]
packages = []
