[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-inventory-rebalancing"
version = "0.0.0"
description = "RelationalAI template: inventory_rebalancing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==0.14.4",
  "pandas",
]

[tool.setuptools]
packages = []
