[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-supply-chain-transport"
version = "0.0.0"
description = "RelationalAI template: supply_chain_transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==0.14.2",
  "pandas",
]

[tool.setuptools]
packages = []
