[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-test-data-generation"
version = "0.0.0"
description = "RelationalAI template: test_data_generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==0.14.4",
  "pandas",
]

[tool.setuptools]
packages = []
