[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-vehicle-scheduling"
version = "0.0.0"
description = "RelationalAI template: vehicle_scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai>=0.14.2",
  "pandas",
]

[tool.setuptools]
packages = []
