[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-disease-outbreak-prevention-network"
version = "0.0.0"
description = "RelationalAI template: disease outbreak prevention network with degree centrality"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "relationalai>=1.0.0a6",
  "pandas>=2.0.0",
]

[tool.setuptools]
packages = []
