[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-epidemic-spread-intervention"
version = "0.0.0"
description = "RelationalAI template: Epidemic Spread Intervention"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==1.0.0a8",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
visualization = [
  "streamlit>=1.30.0",
  "plotly>=5.18.0",
]

[tool.setuptools]
packages = []
