[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-template-portfolio-balancing"
version = "0.0.0"
description = "RelationalAI template: portfolio_balancing (PyRel v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "relationalai==1.0.0",
  "pandas",
]

[tool.setuptools]
packages = []
